mux-compiler/tests/snapshots/executable_integration__executable_integration__parser_invalid_map_key.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux run /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_invalid_map_key.mux`
error: Map keys must be hashable (primitive types only). Found '[?]'
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_invalid_map_key.mux:2:11
   |
 2 | auto m = {[]: 1}
   |           ^
